{
  "version": 4,
  "terraform_version": "1.3.0",
  "serial": 205,
  "lineage": "3fc5c790-99b5-1968-2607-502897972c93",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "srv_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f07ad8cf2a486328",
            "domain": "vpc",
            "id": "eipalloc-0f07ad8cf2a486328",
            "network_border_group": "sa-east-1",
            "public_dns": "ec2-52-67-249-193.sa-east-1.compute.amazonaws.com",
            "public_ip": "52.67.249.193",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "srv1_apache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0895310529c333a0c",
            "arn": "arn:aws:ec2:sa-east-1:597490707802:instance/i-0959bc7f948c72e4b",
            "associate_public_ip_address": false,
            "availability_zone": "sa-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0959bc7f948c72e4b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0be4b60332c3276ae",
            "private_dns": "ip-172-0-3-56.sa-east-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.0.3.56",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bc167ee0bc63e857",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a9057e607e22bf93",
            "tags": {
              "Name": "apache"
            },
            "tags_all": {
              "Name": "apache"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02686fb1e46055934"
            ]
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.webservers",
            "aws_subnet.priv_subnet_ws",
            "aws_vpc.srv_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "srv2_nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0895310529c333a0c",
            "arn": "arn:aws:ec2:sa-east-1:597490707802:instance/i-0d69bf89e714d29c9",
            "associate_public_ip_address": false,
            "availability_zone": "sa-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d69bf89e714d29c9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cd625e2fc7ae5425",
            "private_dns": "ip-172-0-3-55.sa-east-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.0.3.55",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02dd2379414cdf934",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a9057e607e22bf93",
            "tags": {
              "Name": "nginx"
            },
            "tags_all": {
              "Name": "nginx"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02686fb1e46055934"
            ]
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.webservers",
            "aws_subnet.priv_subnet_ws",
            "aws_vpc.srv_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:597490707802:internet-gateway/igw-0f3bce7da9aba0da8",
            "id": "igw-0f3bce7da9aba0da8",
            "owner_id": "597490707802",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-007ead4e65e24e772"
          },
          "dependencies": [
            "aws_vpc.srv_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:597490707802:loadbalancer/app/lb/9d512c758a9fd75d",
            "arn_suffix": "app/lb/9d512c758a9fd75d",
            "desync_mitigation_mode": "defensive",
            "dns_name": "lb-1370116317.sa-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:sa-east-1:597490707802:loadbalancer/app/lb/9d512c758a9fd75d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0be2921071cf871ad"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00173af184d8dd108"
              },
              {
                "subnet_id": "subnet-01a42c1b847fb3daf"
              }
            ],
            "subnets": [
              "subnet-00173af184d8dd108",
              "subnet-01a42c1b847fb3daf"
            ],
            "vpc_id": "vpc-007ead4e65e24e772",
            "zone_id": "Z2P70J7HTTTPLU"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.pub_subnet_sa1a",
            "aws_subnet.pub_subnet_sa1c",
            "aws_vpc.srv_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:597490707802:listener/app/lb/9d512c758a9fd75d/4b7b6ec19d5174d5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:sa-east-1:597490707802:targetgroup/alb-target-group/9dc16f96c746abb1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:sa-east-1:597490707802:listener/app/lb/9d512c758a9fd75d/4b7b6ec19d5174d5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:sa-east-1:597490707802:loadbalancer/app/lb/9d512c758a9fd75d",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.this",
            "aws_security_group.alb",
            "aws_subnet.pub_subnet_sa1a",
            "aws_subnet.pub_subnet_sa1c",
            "aws_vpc.srv_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:597490707802:targetgroup/alb-target-group/9dc16f96c746abb1",
            "arn_suffix": "targetgroup/alb-target-group/9dc16f96c746abb1",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:sa-east-1:597490707802:targetgroup/alb-target-group/9dc16f96c746abb1",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "alb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-007ead4e65e24e772"
          },
          "dependencies": [
            "aws_vpc.srv_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "apache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:sa-east-1:597490707802:targetgroup/alb-target-group/9dc16f96c746abb1-20221006155911048100000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:sa-east-1:597490707802:targetgroup/alb-target-group/9dc16f96c746abb1",
            "target_id": "i-0959bc7f948c72e4b"
          },
          "dependencies": [
            "aws_instance.srv1_apache",
            "aws_lb_target_group.this",
            "aws_security_group.alb",
            "aws_security_group.webservers",
            "aws_subnet.priv_subnet_ws",
            "aws_vpc.srv_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:sa-east-1:597490707802:targetgroup/alb-target-group/9dc16f96c746abb1-20221006155911152900000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:sa-east-1:597490707802:targetgroup/alb-target-group/9dc16f96c746abb1",
            "target_id": "i-0d69bf89e714d29c9"
          },
          "dependencies": [
            "aws_instance.srv2_nginx",
            "aws_lb_target_group.this",
            "aws_security_group.alb",
            "aws_security_group.webservers",
            "aws_subnet.priv_subnet_ws",
            "aws_vpc.srv_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f07ad8cf2a486328",
            "connectivity_type": "public",
            "id": "nat-003d06c5050c5fe9f",
            "network_interface_id": "eni-0371ef00525a2178c",
            "private_ip": "172.0.1.14",
            "public_ip": "52.67.249.193",
            "subnet_id": "subnet-01a42c1b847fb3daf",
            "tags": {
              "Name": "nat_gateway"
            },
            "tags_all": {
              "Name": "nat_gateway"
            }
          },
          "dependencies": [
            "aws_eip.srv_eip",
            "aws_subnet.pub_subnet_sa1a",
            "aws_vpc.srv_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "priv_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:597490707802:route-table/rtb-02e9222a7e48a3918",
            "id": "rtb-02e9222a7e48a3918",
            "owner_id": "597490707802",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-003d06c5050c5fe9f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "priv_rt"
            },
            "tags_all": {
              "Name": "priv_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-007ead4e65e24e772"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.srv_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.pub_subnet_sa1a",
            "aws_vpc.srv_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:597490707802:route-table/rtb-0617137c48dd6b5f7",
            "id": "rtb-0617137c48dd6b5f7",
            "owner_id": "597490707802",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f3bce7da9aba0da8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pub_rt"
            },
            "tags_all": {
              "Name": "pub_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-007ead4e65e24e772"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.srv_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_as",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0831f436073ba1eff",
            "route_table_id": "rtb-02e9222a7e48a3918",
            "subnet_id": "subnet-0a9057e607e22bf93"
          },
          "dependencies": [
            "aws_eip.srv_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.priv_rt",
            "aws_subnet.priv_subnet_ws",
            "aws_subnet.pub_subnet_sa1a",
            "aws_vpc.srv_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_sa1a_as",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025f68001f7bcf696",
            "route_table_id": "rtb-0617137c48dd6b5f7",
            "subnet_id": "subnet-01a42c1b847fb3daf"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pub_rt",
            "aws_subnet.pub_subnet_sa1a",
            "aws_vpc.srv_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_sa1c_as",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08bb5cd79ab50983a",
            "route_table_id": "rtb-0617137c48dd6b5f7",
            "subnet_id": "subnet-00173af184d8dd108"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pub_rt",
            "aws_subnet.pub_subnet_sa1c",
            "aws_vpc.srv_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:597490707802:security-group/sg-0be2921071cf871ad",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Acceso al puerto 80 de nuestras instancias",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0be2921071cf871ad",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Acceso al puerto 80 desde el exterior",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "597490707802",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-007ead4e65e24e772"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.srv_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webservers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:597490707802:security-group/sg-02686fb1e46055934",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-02686fb1e46055934",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Expongo el puerto 80 hacia el exterior",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0be2921071cf871ad"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "webserver-policy",
            "name_prefix": "",
            "owner_id": "597490707802",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-007ead4e65e24e772"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.srv_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv_subnet_ws",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:597490707802:subnet/subnet-0a9057e607e22bf93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "172.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a9057e607e22bf93",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "597490707802",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "priv_subnet_ws"
            },
            "tags_all": {
              "Name": "priv_subnet_ws"
            },
            "vpc_id": "vpc-007ead4e65e24e772"
          },
          "dependencies": [
            "aws_vpc.srv_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet_sa1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:597490707802:subnet/subnet-01a42c1b847fb3daf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "172.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a42c1b847fb3daf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "597490707802",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub_subnet_sa1a"
            },
            "tags_all": {
              "Name": "pub_subnet_sa1a"
            },
            "vpc_id": "vpc-007ead4e65e24e772"
          },
          "dependencies": [
            "aws_vpc.srv_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet_sa1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:597490707802:subnet/subnet-00173af184d8dd108",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1c",
            "availability_zone_id": "sae1-az3",
            "cidr_block": "172.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00173af184d8dd108",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "597490707802",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub_subnet_sa1c"
            },
            "tags_all": {
              "Name": "pub_subnet_sa1c"
            },
            "vpc_id": "vpc-007ead4e65e24e772"
          },
          "dependencies": [
            "aws_vpc.srv_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "srv_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:597490707802:vpc/vpc-007ead4e65e24e772",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.0.0.0/22",
            "default_network_acl_id": "acl-01d3955d4273b92f2",
            "default_route_table_id": "rtb-05a0dad5752160155",
            "default_security_group_id": "sg-0a3a34c757f335624",
            "dhcp_options_id": "dopt-01cdc4c56d56f6228",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-007ead4e65e24e772",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05a0dad5752160155",
            "owner_id": "597490707802",
            "tags": {
              "Name": "srv_vpc"
            },
            "tags_all": {
              "Name": "srv_vpc"
            }
          }
        }
      ]
    }
  ]
}